# willbur404

./: .flake8  .gitignore  .pre-commit-config.yaml  .pylintrc  README.md  cspell.json  db.sqlite3  pyproject.toml
blog/: models.py  urls.py  views.py
blog/migrations/: 0001_initial.py
blog/static/blog/css/: pace.css
blog/static/blog/js/: script.js
blogproject/: settings.py  urls.py
templates/blog/: index.html
